@@ -1,3 +1,15 @@
+2010-06-09  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* CodeDuplicatedLocator.cs: Ignore duplicated code located inside
+	generated code.
+	* InstructionMatcher.cs: Refactor AreEquivalent. Parameters and
+	variables do not need to the "at the same index" to be a match.
+	Matching now also include STLOC* (not just LDLOC*)
+	* Pattern.cs: Rework ComputePrefixes to set/reset Target on
+	InstructionMatcher since this could lead to looking at instruction
+	from another method (than Target) leading to exceptions or false
+	positives
+
 2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* AvoidCodeDuplicatedInSiblingClassesRule.cs:
